# neo4j-maf-provider

./: .env.sample  .gitignore  ACTIONS.md  CLAUDE.md  CONTEXT_PROVIDERS.md  CONTRIBUTING.md  DUAL.md  GUIDE_DEV_CONTAINERS.md  IMPROVE.md  LICENSE  MEM_EXAMPLE.md  NEO4J_PROVIDER.md  NEO4J_PROVIDER_ARCHITECTURE.md  PROJECT_PLAN.md  PROVIDER_LIBRARY.md  README.md  azure.yaml  docker-run.sh  pyproject.toml  setup_env.py
docs/: PUBLISH.md  api_reference.md  architecture.md  getting_started.md
dotnet/: Directory.Build.props  Directory.Packages.props  README.md  neo4j-provider.sln
infra/: main.bicep
infra/core/ai/: cognitiveservices.bicep
python/: DEV_SETUP.md  README.md  pyproject.toml
python/docs/: MEM_EXAMPLE.md  PUBLISH.md  api_reference.md
python/samples/: README.md  SETUP.md  setup_env.py
python/samples/scripts/: setup_azure.sh
python/samples/src/samples/: __init__.py
python/samples/src/samples/aircraft_domain/: __init__.py  flight_delays.py
python/samples/src/samples/basic_fulltext/: main.py
python/samples/src/samples/memory_basic/: README.md
python/samples/src/samples/shared/: __init__.py  agent.py  cli.py  env.py
python/samples/src/samples/vector_search/: semantic_search.py
python/scripts/: publish.sh  version-bump.sh
python/tests/: __init__.py  test_provider.py
samples/: .dockerignore  Dockerfile  GUIDE_DEV_CONTAINERS.md  README.md  SERVERLESS.md  SETUP.md  azure.yaml  pyproject.toml
samples/.devcontainer/: devcontainer.json
samples/aircraft_domain/: component_health.py  flight_delays.py  maintenance_search.py
samples/basic_fulltext/: __init__.py  main.py
samples/graph_enriched/: README.md  main.py
samples/infra/: main.bicep
samples/infra/core/host/: ai-environment.bicep
samples/shared/: agent.py  env.py
samples/src/samples/: __init__.py
samples/src/samples/aircraft_domain/: README.md  component_health.py  maintenance_search.py
samples/src/samples/basic_fulltext/: README.md  azure_thread_memory.py
samples/src/samples/graph_enriched/: __init__.py  main.py
samples/src/samples/memory_basic/: __init__.py  main.py
samples/src/samples/shared/: cli.py  logging.py  utils.py
samples/src/samples/vector_search/: README.md  main.py  semantic_search.py
samples/vector_search/: __init__.py  main.py  semantic_search.py
scripts/: backup_neo4j.py  load_data.sh  restore_neo4j.py  setup_aircraft_indexes.py  setup_azure.sh  start_dev_container_post_create.sh
src/: agent.py  discover_schema.py  explore_aircraft_db.py  explore_graph_enriched.py  gunicorn.conf.py  logging_config.py  main.py  neo4j_client.py  neo4j_context_provider.py  start_agent.py  test_server.py  util.py  vector_search.py
src/api/: main.py  neo4j_utils.py  routes.py
src/neo4j_provider/: __init__.py  embedder.py  fulltext.py  provider.py
src/samples/: __init__.py  agent_memory.py  aircraft_flight_delays.py  aircraft_maintenance_search.py  azure_thread_memory.py  component_health.py  context_provider_basic.py  context_provider_graph_enriched.py  context_provider_vector.py  semantic_search.py
src/utils/: __init__.py  env.py
temp/: NEO4J_PROVIDER_ARCHITECTURE.md
tests/: test_multi_hop_traversal.py  test_neo4j_context_provider.py  test_provider.py
