[project]
name = "neo4j-maf-provider"
version = "0.1.0"
description = "Neo4j Context Provider for Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-core>=1.0.0b251120",
    "agent-framework-azure-ai>=1.0.0b251120",
    "azure-identity>=1.19.0",
    "azure-ai-projects>=1.0.0b11",
    "azure-ai-inference>=1.0.0b7",
    "python-dotenv",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.0.0",
    "neo4j-graphrag>=1.0.0",
]

[project.scripts]
start-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo4j_provider", "src/samples", "src/utils", "src/agent.py", "src/main.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.workspace]
members = [
    "data-pipeline",
]
