[project]
name = "neo4j-maf-provider-workspace"
version = "0.1.0"
description = "Neo4j Context Provider workspace for Microsoft Agent Framework"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.uv.workspace]
members = [
    "packages/agent-framework-neo4j",
    "samples",
]

[tool.uv.sources]
agent-framework-neo4j = { workspace = true }

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "agent-framework-neo4j",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["agent_framework_neo4j"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["packages/agent-framework-neo4j/agent_framework_neo4j"]
branch = true
omit = ["*/__init__.py"]
